--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,3 +1,6 @@
+# Go to sleep after one hour (1*60*60*1000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
