--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,5 +1,9 @@
 # Go to sleep after one hour (1*60*60*1000ms)
+CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+# Make Bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
